---
source: libprotocol/tests/integration_test.rs
expression: "fs::read_to_string(&result_path)?"
---
"{\n  \"$schema\": \"https://json-schema.org/draft/2020-12/schema\",\n  \"title\": \"Scenario\",\n  \"type\": \"object\",\n  \"properties\": {\n    \"description\": {\n      \"type\": [\n        \"string\",\n        \"null\"\n      ]\n    },\n    \"journeys\": {\n      \"type\": \"array\",\n      \"items\": {\n        \"$ref\": \"#/$defs/Journey\"\n      }\n    },\n    \"metadata\": {\n      \"type\": \"null\"\n    },\n    \"name\": {\n      \"type\": \"string\"\n    },\n    \"tags\": {\n      \"type\": [\n        \"array\",\n        \"null\"\n      ],\n      \"items\": {\n        \"type\": \"string\"\n      }\n    },\n    \"target\": {\n      \"$ref\": \"#/$defs/Target\"\n    },\n    \"thresholds\": {\n      \"type\": [\n        \"array\",\n        \"null\"\n      ],\n      \"items\": {\n        \"$ref\": \"#/$defs/Threshold\"\n      }\n    },\n    \"version\": {\n      \"type\": \"integer\",\n      \"format\": \"uint16\",\n      \"maximum\": 65535,\n      \"minimum\": 0\n    },\n    \"workload\": {\n      \"$ref\": \"#/$defs/Workload\"\n    }\n  },\n  \"$version\": \"1\",\n  \"required\": [\n    \"version\",\n    \"name\",\n    \"target\",\n    \"workload\",\n    \"journeys\"\n  ],\n  \"$defs\": {\n    \"Journey\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"name\": {\n          \"type\": \"string\"\n        },\n        \"steps\": {\n          \"type\": \"array\",\n          \"items\": {\n            \"$ref\": \"#/$defs/Step\"\n          }\n        },\n        \"weight\": {\n          \"type\": \"integer\",\n          \"format\": \"uint16\",\n          \"maximum\": 65535,\n          \"minimum\": 0\n        }\n      },\n      \"required\": [\n        \"name\",\n        \"weight\",\n        \"steps\"\n      ]\n    },\n    \"Stage\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"duration_sec\": {\n          \"type\": \"integer\",\n          \"format\": \"int32\"\n        },\n        \"rps\": {\n          \"type\": \"integer\",\n          \"format\": \"int32\"\n        }\n      },\n      \"required\": [\n        \"duration_sec\",\n        \"rps\"\n      ]\n    },\n    \"Step\": {\n      \"oneOf\": [\n        {\n          \"type\": \"object\",\n          \"properties\": {\n            \"duration_ms\": {\n              \"type\": \"integer\",\n              \"format\": \"uint32\",\n              \"minimum\": 0\n            },\n            \"type\": {\n              \"type\": \"string\",\n              \"const\": \"sleep\"\n            }\n          },\n          \"required\": [\n            \"type\",\n            \"duration_ms\"\n          ]\n        },\n        {\n          \"type\": \"object\",\n          \"properties\": {\n            \"body\": {\n              \"type\": [\n                \"string\",\n                \"null\"\n              ]\n            },\n            \"headers\": {\n              \"type\": [\n                \"object\",\n                \"null\"\n              ],\n              \"additionalProperties\": {\n                \"type\": \"string\"\n              }\n            },\n            \"method\": {\n              \"$ref\": \"#/$defs/StepMethod\"\n            },\n            \"path\": {\n              \"type\": \"string\"\n            },\n            \"timeout_ms\": {\n              \"type\": [\n                \"integer\",\n                \"null\"\n              ],\n              \"format\": \"uint32\",\n              \"minimum\": 0\n            },\n            \"type\": {\n              \"type\": \"string\",\n              \"const\": \"request\"\n            }\n          },\n          \"required\": [\n            \"type\",\n            \"method\",\n            \"path\"\n          ]\n        }\n      ]\n    },\n    \"StepMethod\": {\n      \"type\": \"string\",\n      \"enum\": [\n        \"GET\",\n        \"POST\",\n        \"PUT\",\n        \"PATCH\",\n        \"DELETE\"\n      ]\n    },\n    \"Target\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"base_url\": {\n          \"type\": \"string\"\n        },\n        \"default_headers\": {\n          \"type\": [\n            \"object\",\n            \"null\"\n          ],\n          \"additionalProperties\": {\n            \"type\": \"string\"\n          }\n        },\n        \"insecure_tls\": {\n          \"type\": [\n            \"boolean\",\n            \"null\"\n          ]\n        }\n      },\n      \"required\": [\n        \"base_url\"\n      ]\n    },\n    \"Threshold\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"metric\": {\n          \"type\": \"string\"\n        },\n        \"op\": {\n          \"$ref\": \"#/$defs/ThresholdOperator\"\n        },\n        \"scope\": {\n          \"anyOf\": [\n            {\n              \"$ref\": \"#/$defs/ThresholdScope\"\n            },\n            {\n              \"type\": \"null\"\n            }\n          ]\n        },\n        \"value\": {\n          \"type\": \"number\",\n          \"format\": \"double\"\n        }\n      },\n      \"required\": [\n        \"metric\",\n        \"op\",\n        \"value\"\n      ]\n    },\n    \"ThresholdOperator\": {\n      \"type\": \"string\",\n      \"enum\": [\n        \"lt\",\n        \"gt\",\n        \"lte\",\n        \"gte\",\n        \"eq\"\n      ]\n    },\n    \"ThresholdScope\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"endpoint\": {\n          \"type\": \"string\"\n        },\n        \"journey\": {\n          \"type\": \"string\"\n        }\n      },\n      \"required\": [\n        \"endpoint\",\n        \"journey\"\n      ]\n    },\n    \"Workload\": {\n      \"type\": \"object\",\n      \"properties\": {\n        \"stages\": {\n          \"type\": \"array\",\n          \"items\": {\n            \"$ref\": \"#/$defs/Stage\"\n          }\n        }\n      },\n      \"required\": [\n        \"stages\"\n      ]\n    }\n  }\n}"
